# Void_RS

./: .gitignore  Cargo.toml  README.md
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251010_102959_user_table.rs
src/: input.rs  main.rs  orderbook.rs  route.rs
src/database/: database_connection.rs
src/lib/auth/: mod.rs  request_structure.rs  response_structure.rs
src/routes/: auth.rs  mod.rs
src/services/: auth_services.rs
