[package]
name = "voidRS"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
argon2 = "0.5.3"
chrono = "0.4.42"
dotenvy = "0.15.7"
jsonwebtoken = "10.0.0"
sea-orm = { version = "1.1.16", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-macros = "1.1.16"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
uuid = "1.18.1"
